--- a/Presentation/Presentation-Group4.ipynb
+++ b/Presentation/Presentation-Group4.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Analysis on IMDb Movie Data\n",
     "\n",
@@ -26,7 +30,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Analysis\n",
     "Five analyses were brought out by members in the group.\n",
@@ -34,13 +42,20 @@
     "This analysis was posted by **Junru (Bill) Zhong**, and the following aims were setted.\n",
     "* Find out which director earned most.\n",
     "* Find out the genres of the works of the five-most earned directors.\n",
-    "* Estimate how much each of them will get in their next film."
+    "* Estimate how much each of them will get in their next film.\n",
+    "### Technologies\n",
+    "* Python\n",
+    "* Package: pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -82,6 +97,162 @@
     "# Read data\n",
     "df = pd.read_csv('../Dataset/IMDB-Movie-Data.csv')\n",
     "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Arranging Data\n",
+    "* Use `groupby` method provided by pandas, select all directors and their films' revenue.\n",
+    "* Collect this data with the film count and total revenue of their works.\n",
+    "* Drop the data with value of null."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Director     sum  count\n",
+      "0           Aamir Khan    1.20      1\n",
+      "1  Abdellatif Kechiche    2.20      1\n",
+      "3           Adam McKay  438.14      4\n",
+      "4        Adam Shankman  157.33      2\n",
+      "5         Adam Wingard   21.07      2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List all directors.\n",
+    "directorList = df.groupby('Director')['Revenue (Millions)'].agg(['sum', 'count']).reset_index()\n",
+    "# Delete invalid data\n",
+    "directorList = directorList.dropna()\n",
+    "# Print out result\n",
+    "print(directorList.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sort Data\n",
+    "Sort the data according to the **average revenue** of each film that the directors directed.\n",
+    "* Calculate the average revenue.\n",
+    "* Sort the list.\n",
+    "* Save the first five directors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Director     sum  count      avg\n",
+      "0           Aamir Khan    1.20      1    1.200\n",
+      "1  Abdellatif Kechiche    2.20      1    2.200\n",
+      "3           Adam McKay  438.14      4  109.535\n",
+      "4        Adam Shankman  157.33      2   78.665\n",
+      "5         Adam Wingard   21.07      2   10.535\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get average revenue of each director.\n",
+    "directorList['avg'] = directorList['sum'] / directorList['count']\n",
+    "print(directorList.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Director      sum  count      avg\n",
+      "261    James Cameron   760.51      1  760.510\n",
+      "114  Colin Trevorrow   652.18      1  652.180\n",
+      "341      Joss Whedon  1082.27      2  541.135\n",
+      "377      Lee Unkrich   414.98      1  414.980\n",
+      "208        Gary Ross   408.00      1  408.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sorting by revenue, list the first five data.\n",
+    "firstFive = directorList.sort_values('avg', ascending=False).head()\n",
+    "print(firstFive)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Genres of Directors' Work\n",
+    "Go back to the original dataset, then match all entries of these directors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "James Cameron, Action,Adventure,Fantasy, Avatar\n",
+      "Colin Trevorrow, Action,Adventure,Sci-Fi, Jurassic World\n",
+      "Joss Whedon, Action,Sci-Fi, The Avengers\n",
+      "Joss Whedon, Action,Adventure,Sci-Fi, Avengers: Age of Ultron\n",
+      "Lee Unkrich, Animation,Adventure,Comedy, Toy Story 3\n",
+      "Gary Ross, Adventure,Sci-Fi,Thriller, The Hunger Games\n",
+      "Gary Ross, Action,Biography,Drama, Free State of Jones\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Searching their works.\n",
+    "directorNames = firstFive['Director']\n",
+    "for directorName in directorNames:\n",
+    "    for index, row in df.iterrows():\n",
+    "        if row['Director'] == directorName:\n",
+    "            print(row['Director'] + ', ' + row['Genre'] + ', ' + row['Title'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*One movie from **Gary Ross** was not calculated because there is no revenue data.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "* In the first five directors, seven of their works were recorded.\n",
+    "* Six of seven films have the genre of **Action**, that means action films are popular.\n",
+    "* Four of seven films have the genre of **Sci-Fi (科幻)**, this genre is also popular.\n",
+    "![](first-two.png)\n",
+    "![](third.png)\n",
+    "![](fourth-fifth.png)"
    ]
   },
   {
