update Frank's analysis

--- a/Presentation/Presentation-Group4.ipynb
+++ b/Presentation/Presentation-Group4.ipynb
@@ -263,7 +263,7 @@
     "This analysis was posted by **Kefu (Frank) Wu**, and the following aims were setted.\n",
     "* Find out which director is praised most.\n",
     "* Find out the genres of the works of the five-most praised directors.\n",
-    "* Estimate the rating that new film may get according to the genres of the film and the director.\n",
+    "* Estimate the rating that new film may get according to the genres of the film and its director.\n",
     "### Technologies\n",
     "* Python\n",
     "* Package: pandas"
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "# Get average revenue of each director.\n",
+    "# Get average rating of each director.\n",
     "directorList['avg'] = directorList['sum'] / directorList['count']\n",
     "print(directorList.head())"
    ]
@@ -401,7 +401,7 @@
     }
    ],
    "source": [
-    "# Sorting by revenue, list the first five data.\n",
+    "# Sorting by rating, list the first five data.\n",
     "firstFive = directorList.sort_values('avg', ascending=False).head()\n",
     "print(firstFive)"
    ]
@@ -461,8 +461,17 @@
     "* We find out five director that are favored by their audience.\n",
     "* In the first five directors, nine of their works were recorded.\n",
     "* Among the directors, Chrostopher Nolan is the only director that can maintain high average rating after producing more than one film.\n",
-    "* In Nolan's five works, there are three of them are action, which means that Nolan is good at directoring "
+    "* In Nolan's five works, there are three of them are action, which means that Nolan is good at directoring action film."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
