--- a/Presentation/Presentation-Group4.ipynb
+++ b/Presentation/Presentation-Group4.ipynb
@@ -764,7 +764,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2251,16 +2251,19 @@
     "collapsed": true
    },
    "source": [
-    "## Word Cloud\n",
+    "## Keywords & Rating\n",
     "This analysis provided by Jiaqi (Garfield) Wu. By using these data, we can create a word cloud based on the descriptions and to find out the most frequent appeared keyword, and the relationship between the keyword and the rating.\n",
     "\n",
-    "### Implementation"
+    "### Implementation\n",
+    "#### Step 1: Get the keywords"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2304,14 +2307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Future work to be continued once I get my own computer. This computer has only installed the office suit."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Summary"
+    "#### Step 2: Find out relationship between keywords and rating"
    ]
   },
   {
