--- a/Presentation/Presentation-Group4.ipynb
+++ b/Presentation/Presentation-Group4.ipynb
@@ -36,8 +36,14 @@
     }
    },
    "source": [
-    "## Analysis\n",
+    "## Analyses\n",
     "Five analyses were brought out by members in the group.\n",
+    "* Directors and Revenue\n",
+    "* Directors and Rating\n",
+    "* Genres and Time\n",
+    "* Rating and Metascore\n",
+    "* Keywords in Films\n",
+    "\n",
     "## Analysis on Directors\n",
     "This analysis was posted by **Junru (Bill) Zhong**, and the following aims were setted.\n",
     "* Find out which director earned most.\n",
