--- a/Presentation/Presentation-Group4.ipynb
+++ b/Presentation/Presentation-Group4.ipynb
@@ -467,7 +467,7 @@
     "* We find out five director that are favored by their audience.\n",
     "* In the first five directors, nine of their works were recorded.\n",
     "* Among the directors, Chrostopher Nolan is the only director that can maintain high average rating after producing more than one film.\n",
-    "* In Nolan's five works, there are three of them are action, which means that Nolan is good at directoring action film."
+    "* In Nolan's five works, there are three of them are action/sci-Fi, which means that Nolan is good at directoring action/sci-Fi film."
    ]
   },
   {
