--- a/Presentation/Presentation-Group4.ipynb
+++ b/Presentation/Presentation-Group4.ipynb
@@ -770,7 +770,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
