Frank‘s Part Update

--- a/Presentation/Presentation-Group4.ipynb
+++ b/Presentation/Presentation-Group4.ipynb
@@ -267,7 +267,7 @@
    "source": [
     "## Analysis on Directors by Rating\n",
     "This analysis was posted by **Kefu (Frank) Wu**, and the following aims were setted.\n",
-    "* Find out which director is praised most.\n",
+    "* Find out which director is praised most by rating,as revenue cannot define how the films are evaluated by the public.\n",
     "* Find out the genres of the works of the five-most praised directors.\n",
     "* Estimate the rating that new film may get according to the genres of the film and its director.\n",
     "### Technologies\n",
@@ -467,7 +467,9 @@
     "* We find out five director that are favored by their audience.\n",
     "* In the first five directors, nine of their works were recorded.\n",
     "* Among the directors, Chrostopher Nolan is the only director that can maintain high average rating after producing more than one film.\n",
-    "* In Nolan's five works, there are three of them are action/sci-Fi, which means that Nolan is good at directoring action/sci-Fi film."
+    "* In Nolan's five works, there are three of them are action/sci-Fi, which means that Nolan is good at directoring action/sci-Fi film.\n",
+    "* To sum up, we can predict that Chrostopher Nolan's next action/sci-Fi movie will gain a high comment, but for the rest of the top-five directors we cannot predict because there is only one record for each of them.\n",
+    "![](Christopher Nolan.png)"
    ]
   },
   {
