Refine code in LaTeX report.

--- a/Report/FinalReport/FinalReport-Group-4.tex
+++ b/Report/FinalReport/FinalReport-Group-4.tex
@@ -798,7 +798,8 @@ by iteration, finally we got 20 unique genres. Here are the result.
 After we get each individual genres. We plot how many films of each genre were made by year onto a bar graph
 
     \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}5}]:} \PY{c+c1}{\PYZsh{}Now we can iterate through each genre, counting the number of films that contain that genre}
+{\color{incolor}In [{\color{incolor}5}]:} \PY{c+c1}{\PYZsh{}Now we can iterate through each genre, }
+        \PY{c+c1}{\PYZsh{}counting the number of films that contain that genre}
         \PY{c+c1}{\PYZsh{}then plot how many films of each genre were made by year onto a bar graph}
         
         \PY{n+nb}{print}\PY{p}{(}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{Number of movies in each genre: }\PY{l+s+se}{\PYZbs{}n}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
